--- a/src/interceptor/__tests__/__fixtures__/ts/3.1
+++ b/src/interceptor/__tests__/__fixtures__/ts/3.1
@@ -1,6 +1,6 @@
 import { parse } from '@babel/parser';
 
-// @test-next-line
+// @unitless-io:test
 const parseJs = (code: string) => {
   return parse(code);
 };
