--- a/src/interceptor/__tests__/__fixtures__/js/4.1
+++ b/src/interceptor/__tests__/__fixtures__/js/4.1
@@ -1,7 +1,7 @@
 import { _$LocalProxy } from '@unitless-io/loader/dist/web';
 import { parse } from '@babel/parser';
 
-// @test-next-line
+// @unitless-io:test
 export const parseJs = _$LocalProxy(code => {
   return parse(code);
 }, "test-file-id/parseJs");
