--- a/src/interceptor/__tests__/__fixtures__/ts/5.1
+++ b/src/interceptor/__tests__/__fixtures__/ts/5.1
@@ -1,12 +1,12 @@
 import { _$LocalProxy } from '@unitless-io/loader/dist/web';
 import { parse } from '@babel/parser';
 
-// @test-next-line
+// @unitless-io:test
 export const parseJs = _$LocalProxy((code: string) => {
   return parse(code);
 }, "test-file-id/parseJs");
 
-// @test-next-line
+// @unitless-io:test
 export const parseTs = _$LocalProxy((code: string) => {
   return parse(code);
 }, "test-file-id/parseTs");
